[package]
name = "silent_payment_indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.31.1"
leveldb = "0.8.6"
db-key = "0.0.5"
hex-conservative = "0.1.1"
bitcoin_hashes = "0.13.0"
secp256k1 = "0.28.2"
